--- a/hev.html
+++ b/hev.html
@@ -3,18 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gödöllői HÉV</title>
-    <a:href><hev class="css"></hev></a:href>
+    <link rel="stylesheet" href="hev.css">
 </head>
 <body>
     <h1>Történet</h1>
 
-Az első, 10,3 km hosszú szakaszt 1888. június 20-án adták át a forgalomnak, amely akkor a MÁV központi pályaudvara (ma Keleti pu.) mellől indult Rákosfalva érintésével egészen Cinkotáig. A vonal "őskorában" gőzmozdonyok vontatták a szerelvényeket, Cinkotán pedig kocsiszín épült, ahol a járművek karbantartását a mai napig végzik. A második, 9,8 km hosszúságú szakaszt 1900. augusztus 28-án nyitották meg: Cinkota állomástól vezetett Csömör és Kistarcsa érintésével Kerepesig.
+<p>Az első, 10,3 km hosszú szakaszt 1888. június 20-án adták át a forgalomnak, amely akkor a MÁV központi pályaudvara (ma Keleti pu.) mellől indult Rákosfalva érintésével egészen Cinkotáig. A vonal "őskorában" gőzmozdonyok vontatták a szerelvényeket, Cinkotán pedig kocsiszín épült, ahol a járművek karbantartását a mai napig végzik. A második, 9,8 km hosszúságú szakaszt 1900. augusztus 28-án nyitották meg: Cinkota állomástól vezetett Csömör és Kistarcsa érintésével Kerepesig.</p>
 
-A villamos üzemmóddal a forgalom 1911. április 19-én indult meg a Keleti pályaudvar - Cinkota közötti szakaszon. A Kerepes ideiglenes végállomástól Gödöllő MÁV-állomásig tartó harmadik, ezúttal 12,8 km hosszú szakaszt 1911. november 25-én adták át a forgalomnak, immár eleve villamos üzemre berendezve. A vonalhosszabbítással egy időben épült a Cinkota és Kistarcsa közötti rövidebb vonalszakasz, amely Csömör állomást már nem érintette. Ezt a vonalvezetést a Cinkota után található kavicsbánya melletti dombok átvágásával alakították ki, így a vonal hossza 6,2 km-el lett rövidebb. Cinkota és Kistarcsa között ekkor új megállóhely is épült Ilonatelep néven, a Csömörre vezető vonalszakasz pedig szárnyvonallá vált.
+<p>A villamos üzemmóddal a forgalom 1911. április 19-én indult meg a Keleti pályaudvar - Cinkota közötti szakaszon. A Kerepes ideiglenes végállomástól Gödöllő MÁV-állomásig tartó harmadik, ezúttal 12,8 km hosszú szakaszt 1911. november 25-én adták át a forgalomnak, immár eleve villamos üzemre berendezve. A vonalhosszabbítással egy időben épült a Cinkota és Kistarcsa közötti rövidebb vonalszakasz, amely Csömör állomást már nem érintette. Ezt a vonalvezetést a Cinkota után található kavicsbánya melletti dombok átvágásával alakították ki, így a vonal hossza 6,2 km-el lett rövidebb. Cinkota és Kistarcsa között ekkor új megállóhely is épült Ilonatelep néven, a Csömörre vezető vonalszakasz pedig szárnyvonallá vált.</p>
 
-A Budapesten belüli vonalszakasz az első időkben szintben keresztezte a Budapest - Cegléd - Szolnok vasútvonalat. Az egyre növekvő forgalom miatt azonban elkerülhetetlenné vált a HÉV pályaszintjének módosítása, ami 1939 és 1944 között meg is történt. A Kerepesi úti vasúti hidat 1941. augusztus 5-én adták át a forgalomnak. Az 1950-es években tervek készültek a HÉV és az építendő metró közös állomására a Népstadionnál. A metró építése azonban leállt, és csak 1963-ban indult meg újra. Ekkor a metró és a HÉV átszálló csomópontját a Fehér út két oldalán az Örs vezér terén építették meg.
+ <p>A Budapesten belüli vonalszakasz az első időkben szintben keresztezte a Budapest - Cegléd - Szolnok vasútvonalat. Az egyre növekvő forgalom miatt azonban elkerülhetetlenné vált a HÉV pályaszintjének módosítása, ami 1939 és 1944 között meg is történt. A Kerepesi úti vasúti hidat 1941. augusztus 5-én adták át a forgalomnak. Az 1950-es években tervek készültek a HÉV és az építendő metró közös állomására a Népstadionnál. A metró építése azonban leállt, és csak 1963-ban indult meg újra. Ekkor a metró és a HÉV átszálló csomópontját a Fehér út két oldalán az Örs vezér terén építették meg.
 
-A Keleti pályaudvar melletti egykori végállomást 1970. április 3-án szüntették meg, amikor átadták a metró Deák Ferenc tér és Örs vezér tér közötti szakaszát. Az Örs vezért terére került a kelet-pesti autóbuszok végállomása is, így kialakult Budapest egyik legnagyobb forgalmú csomópontja.
+<p>A Keleti pályaudvar melletti egykori végállomást 1970. április 3-án szüntették meg, amikor átadták a metró Deák Ferenc tér és Örs vezér tér közötti szakaszát. Az Örs vezért terére került a kelet-pesti autóbuszok végállomása is, így kialakult Budapest egyik legnagyobb forgalmú csomópontja.</p>
 
 <h1>Érdekességek</h1>
 
